[project]
name = "london-brew"
version = "0.1.0"
description = "Visualising CAMRA's list of London breweries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "mypy[install-types]>=1.15.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pre-commit>=4.1.0", "ruff>=0.9.7"]
notebook = ["ipykernel>=6.29.5"]

[tool.uv]
default-groups = ["dev", "notebook"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/london_brew"]

[tool.hatch.version]
source = "vcs"
